--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,7 +9,8 @@
     }
   ],
   "dependencies": {
-    "jp.keijiro.danish-statues": "0.0.4",
+    "com.unity.ide.visualstudio": "2.0.16",
+    "jp.keijiro.danish-statues": "1.0.0",
     "jp.keijiro.test-assets": "1.0.1",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.imageconversion": "1.0.0",
